roles/kube_prometheus/files/grafana_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kube-prometheus-grafana-ingress"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: '/_/grafana'
            backend:
              serviceName: "kube-prometheus-grafana"
              servicePort: 80
