roles/kube_prometheus/files/prometheus_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kube-prometheus-prometheus-ingress"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  labels:
    app: prometheus
    release: kube-prometheus
spec:
  rules:
    - http:
        paths:
          - path: '/_/prometheus'
            backend:
              serviceName: "kube-prometheus-prometheus"
              servicePort: http
          - path: '/_/alertmanager'
            backend:
              serviceName: "kube-prometheus-alertmanager"
              servicePort: http
